# asdfsdfdfg

./: .gitlab-ci.yml  CHANGELOG.md  COPYING  Cargo.toml  Makefile  README.md  specification.md  test_plan.md  update-version.sh
design/: build.sh  continuous_integration.md  description.md  index.md  introduction.md  references.md  requirements.md  specification.md  template.html5  test_plan.md
design/public/: continuous_integration.html  description.html  index.html  introduction.html  references.html  requirements.html  style.css  test_plan.html
examples/: arma_channel.rs  bode.rs  discrete.rs  discretization.rs  epidemic.rs  leverrier.rs  linear_system.rs  oscillation.rs  polar.rs  poly.rs  root_locus.rs  suspension.rs  transfer_function.rs
src/: lib.rs
src/bode/: mod.rs
src/complex/: mod.rs
src/controller/: mod.rs  pid.rs
src/enums/: mod.rs
src/error/: mod.rs
src/iterator/: mod.rs
src/linear_system/: continuous.rs  discrete.rs  mod.rs  solver.rs
src/plots/: bode.rs  mod.rs  polar.rs  root_locus.rs
src/polynomial/: arithmetic.rs  convex_hull.rs  fft.rs  matrix.rs  mod.rs  roots.rs
src/polynomial_matrix/: mod.rs
src/rational_function/: arithmetic.rs  mod.rs
src/signals/: mod.rs
src/transfer_function/: continuous.rs  discrete.rs  discrete_tf.rs  discretization.rs  matrix.rs  mod.rs
src/units/: mod.rs
src/utils/: mod.rs
tests/: complex.rs  continuous_linear_system.rs  conversions.rs  discrete_linear_system.rs  discrete_transfer_function.rs  linear_system.rs  plots.rs  polynomial.rs
