[package]
name = "automatica"
version = "0.9.0"
authors = ["daingun <>"]
edition = "2018"
description = "Automatic control systems library"
readme = "README.md"
homepage = "https://gitlab.com/daingun/automatica"
repository = "https://gitlab.com/daingun/automatica"
license = "GPL-3.0-only"
keywords = ["control", "system", "signal", "engineering", "polynomial"]
categories = ["science", "mathematics", "simulation"]
exclude = [".gitlab-ci.yml", ".gitignore", "Makefile", "/design"]

[badges]
gitlab = { repository = "daingun/automatica", branch = "master" }

[dependencies]
num-traits = "0.2"
num-complex = "0.2"
nalgebra = "0.18.0"
ndarray = "0.12.1"
approx = "0.3.2"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
