[package]
name = "automatica"
version = "0.9.0"
authors = ["daingun <>"]
edition = "2018"
description = "Automatic control systems library"
readme = "README.md"
homepage = "https://daingun.gitlab.io/automatica"
repository = "https://gitlab.com/daingun/automatica"
license = "GPL-3.0-only"
keywords = ["control", "system", "signal", "engineering", "polynomial"]
categories = ["science", "mathematics", "simulation"]
exclude = [".gitlab-ci.yml", ".gitignore", "Makefile", "/design", "update-version.sh"]

[badges]
gitlab = { repository = "daingun/automatica", branch = "master" }

[dependencies]
num-traits = "0.2"
num-complex = "0.3"
nalgebra = "0.23"
ndarray = "0.13"
approx = "0.4"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
