[package]
name = "au"
version = "0.10.0"
authors = ["daingun <>"]
edition = "2018"
description = "Automatic control systems library"
readme = "README.md"
homepage = "https://github.com/yuulive/au"
repository = "https://github.com/yuulive/au"
license = "GPL-3.0-only"
keywords = ["control", "system", "signal", "engineering", "polynomial"]
categories = ["science", "mathematics", "simulation"]
exclude = [".gitlab-ci.yml", ".gitignore", "Makefile", "/design", "update-version.sh"]

[badges]
github = { repository = "yuulive/au", branch = "master" }

[dependencies]
num-traits = "0.2"
num-complex = "0.3"
nalgebra = "0.23"
ndarray = "0.14"
approx = "0.4"

[dev-dependencies]
proptest = "0.10"
